# spam-detection-pipeline

./: .gitignore  Final.qmd  README.md  final_script_py.py  pyproject.toml  requirements.txt
models/: LogisticRegression.joblib  scaler.joblib  tfidf_vectorizer.joblib
references/: refs.bib
reports/: presentation.html
spam_detection/: __init__.py  config.py  dataset.py  features.py  plots.py  textual_features.py
spam_detection/modeling/: model.py  train.py
